// C:\Users\berik\GolandProjects\GoTune\proto\user.proto
syntax = "proto3";
package user;

option go_package = "github.com/berik/GoTune/proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string address = 4;
  string phone = 5;
  // Пароль не включается в ответы
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3; // Пароль в открытом виде, будет хэширован
  string address = 4;
  string phone = 5;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string address = 4;
  string phone = 5;
  string password = 6; // Опционально, только если меняется пароль
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListUsersResponse {
  repeated User users = 1;
}

message UserResponse {
  User user = 1;
}